--- a/README.adoc
+++ b/README.adoc
@@ -1,38 +1,37 @@
-= Cloud Web Terminal
-Rahman Usta
+= Cloud Terminal for WebSphere Liberty hot deployment 
+Kosta Rebrov copy from (Rahman Usta)
 :doctype: article
 :encoding: utf-8
 :lang: en
 :toc: left
 :numbered:
-:description: CloudTerm is a Web terminal running on a JVM (Java Virtual Machine) or on a Docker container.
-:author: Rahman Usta
-:keywords: web,terminal,java,cloud,tty,docker
-
-++++
-<a class="view-github" href="https://github.com/rahmanusta/cloudterm">View on Github</a>
-<style>
- .imageblock {
-    text-align: center !important;
- }
- 
- .view-github {
-    float: right;
- }
-</style>
-++++
+:description: CloudTerm is a Web terminal running in the WebSphere as an application. Using Hot deploy method you can put WAR file into a working WebSphere server and get console access without server restart
+:author: Kosta Rebrov
+:keywords: web,terminal,java,WebSphere Liberty,cloud,tty
 
 == About
 
-CloudTerm is a Web terminal running on a JVM (Java Virtual Machine) or on a Docker container.
+CloudTerm is a Spring Boot Java Application Web terminal running in the WebShpere Libery server. You can refer to the original repository for a standalone Java version 
 
-image::https://raw.githubusercontent.com/rahmanusta/cloudterm/master/images/Image-310817-062349.305.png[width=900]
-
-//image::images/Image-310817-062349.305.png[width=900]
+image:://image::images/Image-310817-062349.305.png[width=900]
 
 == How to install
 
-You can run it with a standalone Tomcat server or with Docker. After it is run, open the browser http://localhost:8080
+Using Maven put the package together
+
+> mvn clean
+> mvn package
+
+then place files into dropin directory. In WebSphere Liberty, the dropins directory is monitored for changes by default, so files placed there should be hot deployed automatically. However, if you want to ensure that hot deployment is enabled or force a reload, you can use the following methods:
+Enable Automatic Deployment:
+
+By default, WebSphere Liberty automatically deploys applications placed in the dropins directory. Make sure your Liberty server is configured correctly to monitor this directory. The configuration file (server.xml) should include something like this:
+
+[source,xml]
+----
+<quickStartSecurity userName="admin" userPassword="admin"/>
+----
+
 
 === Run on JVM
 
